--- a/pasztorupdated2/pasztor/ModositasiInditvanyok.html
+++ b/pasztorupdated2/pasztor/ModositasiInditvanyok.html
@@ -28,7 +28,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sajtószoba</title>
+    <title>Módosítási indítványok</title>
   </head>
   <body>
     <!--NAVBAR-->
@@ -120,29 +120,52 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a href="#" class="nav-link"
-                ><i class="fas fa-bars navmenubar1"></i
-              ></a>
+                ><i class="fas fa-bars navmenubar1 navtoggler"></i
+              >
+              <i class="fas fa-times navtogglerx hide"></i>
+            </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!---------->
+    <!--NAVTOGGLE-->
+    <div class="hide hideresp togglenav">
+      <div class="darkerbluebg py-3">
+      <div class="d-flex flex-row container justify-content-center">
+        <a href="Beszedek.html"><li class="list-unstyled px-2 pt-1 textwhite">Beszédek <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li> </a>
+        <a href="Sajtoszoba.html"><li class="list-unstyled px-2 pt-1 textwhite">Sajtószoba <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a href="ModositasiInditvanyok.html"><li class="list-unstyled px-2 pt-1 textwhite">Módosítási inditványok <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a href="#"><li class="list-unstyled px-2 pt-1 textwhite">Eseménynaptár <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li> </a>
+        <a href="KerdesekEsValaszok.html"><li class="list-unstyled px-2 pt-1 textwhite">Kérdések - Válaszok <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a>
+          <li class="list-unstyled px-2">
+          <div class="input-group">
+          <input type="text" class="form-control" placeholder="Keresés" aria-label="Keresés" aria-describedby="basic-addon2">
+          <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
+          </div>
+          </li>
+        </a>
+      </div>
+      </div>
+      </div>
+      <!---------->
     <!--BREADCRUMB-->
     <div class="container mt-2">
     <div class="d-flex flex-row">
         <a href="#" class="text-muted"><u>Kezdőlap</u></a>
         <img src="img/Line 7.png" alt="line" class="img-fluid mx-2">
-        <a href="#" class="text-muted"><u>Beszédek</u></a>
+        <a href="#" class="text-muted"><u>Módosítási indítványok</u></a>
     </div>
     </div>
     <!---------->
 
-    <!--TALKS-->
-    <div class="container" id="talks">
-        <div class="display-4 text-center my-3">Beszédek</div>
+    <!--MODIND-->
+    <div class="container" id="modind">
+        <div class="display-4 text-center my-3">Módosítási indítványok</div>
         <div class="mx mt-5">
-        <div class="row mb-5">
+          <div class="row mb-5">
             <div class="col-lg-1">
             <p class="text-muted mt-2 me-2"><small>Szűrés:</small></p>
             </div>
@@ -162,20 +185,19 @@
                     </li>
                 </ul>
             </div>
-        </div>       
+        </div>  
         <!--FIRST POST-->
         <div class="row">
-        <div class="col-lg-2"><img src="img/image 11.png" alt="1" class="img-fluid mt-1"></div>
-        <div class="col-lg-8">
-        <p class="texttitles">Képviselői kérdés az illegális migránsokkal, valamint a magyar határnyitással kapcsolatban (és Ana Brnabić miniszterelnök válasza)</p>
+        <div class="col-lg-10">
+        <p class="texttitles">A helyhatósági választásokról szóló törvény módosításáról szóló törvény -<br> elfogadva</p>
         <div class="d-flex flex-row">
         <p class="widgets2 px-1 text-muted">miniszterelnök</p>
         <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
         <p class="widgets2 px-1 text-muted">illegális migránsok</p>
         </div>
         <div class="d-flex">
-        <p class="date">2021. január 28.</p>
-        <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
+        <p class="date">2020. február 5. 14:55</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -190,17 +212,16 @@
         <!------>
         <!--SECOND POST-->
         <div class="row">
-        <div class="col-lg-2"><img src="img/image 11 (1).png" alt="1" class="img-fluid mt-1"></div>
-        <div class="col-lg-8">
-        <p class="texttitles">Ana Brnabić második kormányának megválasztásáról</p>
+        <div class="col-lg-10">
+        <p class="texttitles">A népképviselők megválasztásáról szóló törvény módosításáról szóló törvény - elfogadva</p>
         <div class="d-flex flex-row">
         <p class="widgets2 px-1 text-muted">miniszterelnök</p>
         <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
         <p class="widgets2 px-1 text-muted">illegális migránsok</p>
         </div>
         <div class="d-flex">
-        <p class="date">2020. október 28.</p>
-        <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
+        <p class="date">2020. február 5. 14:51</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -215,19 +236,18 @@
         <!------>
         <!--THIRD POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11 (2).png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">A Parlament elnökének megválasztásáról (Ivica Dačić)</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2020. október 22. 16:04</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">Levéltári törvény - elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2020. január 20. 11:46</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
           <li class="nav-item mt-1">
@@ -240,19 +260,18 @@
         <!------>
         <!--FOURTH POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11 (2).png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">Ana Brnabić második kormányának megválasztásáról</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2020. október 28.</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">Az állami hivatalnokokról szóló törvény módosításairól szóló törvény - <br> elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2018. november 27. 09:56</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
           <li class="nav-item mt-1">
@@ -265,19 +284,18 @@
         <!------>
         <!--FIFTH POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11.png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">Képviselői kérdés az illegális migránsokkal, valamint a magyar határnyitással kapcsolatban (és Ana Brnabić miniszterelnök válasza)</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2021. január 28.</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">A felsőoktatásról szóló törvény módosításáról szóló törvény - elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2018. szeptember 21. 09:43</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
           <li class="nav-item mt-1">
@@ -290,19 +308,18 @@
         <!------>
         <!--SIXTH POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11 (1).png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">Ana Brnabić második kormányának megválasztásáról</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2020. október 28.</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">A helyhatósági választásokról szóló törvény módosításáról szóló törvény - elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2020. február 5. 14:55</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
           <li class="nav-item mt-1">
@@ -315,19 +332,42 @@
         <!------>
         <!--SEVENTH POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11 (2).png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">A Parlament elnökének megválasztásáról (Ivica Dačić)</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2020. október 22. 16:04</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">A népképviselők megválasztásáról szóló törvény módosításáról szóló törvény - elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2020. február 5. 14:51</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
+        <div class="col-lg-2">
+        <ul class="nav nav-pills">
+            <li class="nav-item mt-1">
+                <small><a class="nav-link widgets" href="#"><img src="img/Vector (Stroke).png" alt="hangszoro" class="img-fluid me-1"> hang</a></small>
+            </li>
+        </ul>
+        </div>
+        </div>
+        <hr>
+        <!------>
+        <!--EIGHT POST-->
+        <div class="row">
+        <div class="col-lg-10">
+        <p class="texttitles">Levéltári törvény - elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2020. január 20. 11:46</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
             <li class="nav-item mt-1">
@@ -338,25 +378,24 @@
         </div>
         <hr>
         <!------>
-        <!--EIGHT POST-->
+        <!--NINETH POST-->
         <div class="row">
-            <div class="col-lg-2"><img src="img/image 11 (2).png" alt="1" class="img-fluid mt-1"></div>
-            <div class="col-lg-8">
-            <p class="texttitles">Ana Brnabić második kormányának megválasztásáról</p>
-            <div class="d-flex flex-row">
-            <p class="widgets2 px-1 text-muted">miniszterelnök</p>
-            <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
-            <p class="widgets2 px-1 text-muted">illegális migránsok</p>
-            </div>
-            <div class="d-flex">
-            <p class="date">2020. október 28.</p>
-            <p class="text-muted  ms-2 mandate">VI. Mandátum</p>
-            </div>
-            </div>
+        <div class="col-lg-10">
+        <p class="texttitles">Az állami hivatalnokokról szóló törvény módosításairól szóló törvény - <br> elfogadva</p>
+        <div class="d-flex flex-row">
+        <p class="widgets2 px-1 text-muted">miniszterelnök</p>
+        <p class="widgets2 px-1 text-muted mx-2">Ana Brnabić</p>
+        <p class="widgets2 px-1 text-muted">illegális migránsok</p>
+        </div>
+        <div class="d-flex">
+        <p class="date">2018. november 27. 09:56</p>
+        <p class="text-muted  ms-2 mandate">VI. mandátum</p>
+        </div>
+        </div>
         <div class="col-lg-2">
         <ul class="nav nav-pills">
             <li class="nav-item mt-1">
-                <small><a class="nav-link widgets" href="#"><img src="img/Vector (Stroke).png" alt="hangszoro" class="img-fluid me-1"> hang</a></small>
+                <small><a class="nav-link widgets" href="#"><img src="img/Union.png" alt="union" class="img-fluid me-1"> szöveg</a></small>
             </li>
         </ul>
         </div>
@@ -409,5 +448,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
