--- a/pasztorupdated2/pasztor/Sajtoszoba.html
+++ b/pasztorupdated2/pasztor/Sajtoszoba.html
@@ -120,14 +120,37 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a href="#" class="nav-link"
-                ><i class="fas fa-bars navmenubar1"></i
-              ></a>
+                ><i class="fas fa-bars navmenubar1 navtoggler"></i
+              >
+              <i class="fas fa-times navtogglerx hide"></i>
+            </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!---------->
+    <!--NAVTOGGLE-->
+    <div class="hide hideresp togglenav">
+      <div class="darkerbluebg py-3">
+      <div class="d-flex flex-row container justify-content-center">
+        <a href="Beszedek.html"><li class="list-unstyled px-2 pt-1 textwhite">Beszédek <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li> </a>
+        <a href="Sajtoszoba.html"><li class="list-unstyled px-2 pt-1 textwhite">Sajtószoba <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a href="ModositasiInditvanyok.html"><li class="list-unstyled px-2 pt-1 textwhite">Módosítási inditványok <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a href="#"><li class="list-unstyled px-2 pt-1 textwhite">Eseménynaptár <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li> </a>
+        <a href="KerdesekEsValaszok.html"><li class="list-unstyled px-2 pt-1 textwhite">Kérdések - Válaszok <span class="ms-2"><img src="img/Line11.png" alt="line" class="img-fluid"></span></li></a>
+        <a>
+          <li class="list-unstyled px-2">
+          <div class="input-group">
+          <input type="text" class="form-control" placeholder="Keresés" aria-label="Keresés" aria-describedby="basic-addon2">
+          <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
+          </div>
+          </li>
+        </a>
+      </div>
+      </div>
+      </div>
+      <!---------->
     <!--BREADCRUMB-->
     <div class="container mt-2">
     <div class="d-flex flex-row">
@@ -198,7 +221,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2020. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -222,7 +245,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2020. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -246,7 +269,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -270,7 +293,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -294,7 +317,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -318,7 +341,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -342,7 +365,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -366,7 +389,7 @@
         </div>
         <div class="d-flex">
         <p class="date">2017. december 17.</p>
-        <p class="text-muted  ms-2 mandate">Vajdaság MA</p>
+        <p class="text-muted  ms-2 VMA">Vajdaság MA</p>
         </div>
         </div>
         <div class="col-lg-2">
@@ -425,5 +448,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
